<resources>
    <string name="app_name">Wetter in meiner Stadt</string>
    <string name="weath_temperature">12°</string>
    
    <string name="town_wind">Wind</string>
    <string name="town_pressure">Druck</string>
    <string name="town_selecttown">Stadt auswählen</string>

    <string name="btn_accept">übernehmen</string>

    <string name="city_sbk">Schwarzenbek</string>
    <string name="city_berlin">Berlin</string>
    <string name="city_hamburg">Hamburg</string>
    <string name="city_london">London</string>
    <string name="city_moscow">Moskau</string>
    <string name="city_newyork">New York</string>
    <string name="btn_wikiinfo">Stadtinfo in WIKI</string>

</resources>