<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityPrimary"
    tools:context=".ChoosetownActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textViewSelectTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town_selecttown"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorEditView"
                android:inputType="text"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/listViewCommonTowns"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorEditView"
                android:scrollbars="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/town_wind"
                    android:layout_marginTop="5dp" />

                <CheckBox
                    android:id="@+id/checkBoxPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/town_pressure"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="30dp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_accept"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>