<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city_themperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weath_temperature"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/city_sbk"
                    android:textSize="24sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="0dp"
                app:srcCompat="@drawable/ic_action_sun" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonWikiInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_wikiinfo" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>